--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.10.2",
+    "@ionic-native/barcode-scanner": "^3.12.1",
+    "@ionic-native/camera": "^3.12.1",
+    "@ionic-native/core": "^3.10.2",
+    "@ionic-native/flashlight": "^3.12.1",
+    "@ionic-native/social-sharing": "^3.12.1",
+    "@ionic-native/speech-recognition": "^3.12.1",
     "@ionic-native/splash-screen": "3.10.2",
     "@ionic-native/status-bar": "3.10.2",
     "@ionic/storage": "2.0.1",
@@ -32,6 +37,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
+    "@ionic/cli-plugin-cordova": "1.4.0",
     "@ionic/cli-plugin-ionic-angular": "1.3.1",
     "typescript": "2.3.3"
   },
